styles.css
body {
  text-align: center;
  font-family: 'Open Sans', sans-serif;
}

.container {
  margin: auto;
  width: 600px;
  border: 1px solid #000;
  padding: 25px;
}

#new-update {
  margin: auto;
  margin-bottom: 15px;
  width: 652px;
  height: 32px;
}

textarea {
  display: inline-block;
  float: left;
  width: 556px;
  height: 26px;
}

button {
  display: inline-block;
  float: right;
  overflow: hidden;
  width: 75px;
  height: 32px;
}

#profile {
  height: 150px;
}

#profile #photo {
  display: inline-block;
  float: left;
  width: 150px;
  height: 150px;
  background-size: cover;
  background-position: center;
}

#profile #username {
  margin-top: 0;
}

#profile #description {
  display: inline-block;
  float: right;
  overflow: hidden;
  width: 425px;
  height: 150px;
  text-align: left;
}

#updates {
  transform: translateY(-1px);
  padding-top: 0;
}

.update {
  margin-top: 25px;
  text-align: left;
}

.update .username {
  display: inline-block;
  float: left;
  width: 50%;
  margin: 0;
}

.update .timestamp {
  display: inline-block;
  float: right;
  width: 50%;
  text-align: right;
}

.update .post {
  display: inline-block;
  width: 100%;
  margin-top: 5px;
}

h3 {
  margin-bottom: 15px;
}

p {
  margin: 0;
}

